<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/settings_title"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <net.usikkert.kouchat.android.component.NickNameEditTextPreference android:title="@string/settings_nick_name_title" android:key="@string/settings_nick_name_key" android:summary="@string/settings_nick_name_summary" android:dialogTitle="@string/settings_nick_name_title" android:dialogMessage="@string/settings_nick_name_dialog_message" android:dialogIcon="@drawable/ic_dialog" />
    <net.usikkert.kouchat.android.component.HoloColorPickerPreference android:title="@string/settings_own_color_title" android:key="@string/settings_own_color_key" android:summary="@string/settings_own_color_summary" android:defaultValue="-15987646" android:dialogTitle="@string/settings_own_color_title" android:dialogIcon="@drawable/ic_dialog" />
    <net.usikkert.kouchat.android.component.HoloColorPickerPreference android:title="@string/settings_sys_color_title" android:key="@string/settings_sys_color_key" android:summary="@string/settings_sys_color_summary" android:defaultValue="-16759040" android:dialogTitle="@string/settings_sys_color_title" android:dialogIcon="@drawable/ic_dialog" />
    <CheckBoxPreference android:title="@string/settings_wake_lock_title" android:key="@string/settings_wake_lock_key" android:summary="@string/settings_wake_lock_summary" android:widgetLayout="@layout/two_state_preference" />
    <PreferenceCategory android:title="@string/settings_notification_title">
        <CheckBoxPreference android:title="@string/settings_notification_light_title" android:key="@string/settings_notification_light_key" android:widgetLayout="@layout/two_state_preference" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/settings_notification_sound_title" android:key="@string/settings_notification_sound_key" android:widgetLayout="@layout/two_state_preference" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/settings_notification_vibration_title" android:key="@string/settings_notification_vibration_key" android:widgetLayout="@layout/two_state_preference" android:defaultValue="true" />
    </PreferenceCategory>
</PreferenceScreen>